# Autonomous-Intervention-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  stay-on-top-of-your.md
.github/workflows/: ci.yml
docs/: langgraph-integration-plan.md  openapi-plan.md  task-plan.md  test-plan.md
docs/testing/: README.md
src/ais/: __init__.py  app.py  config.py  logging_config.py  main.py  versioning.py
static/audit/: index.html
tests/: conftest.py  fakes.py  test_concurrency_revision.py  test_config.py  test_delivery_lifecycle_journey.py  test_demo_scenario.py  test_events_routes.py  test_health.py  test_idempotency_key.py  test_ingest_normalize.py  test_ingress_envelope.py  test_livekit_sim_helpers.py  test_models.py  test_nvidia_llm.py  test_ops_opening_clean.py  test_phase7_http.py  test_pipeline_resume.py  test_planner_cooldown.py  test_planner_policy.py  test_planner_service.py  test_recovery_checkpoint.py  test_retry_policy.py  test_sqs_client.py  test_versioning.py  test_voice_extraction.py  test_voice_lifecycle.py  test_voice_llm_transcript.py  test_voice_routes.py  test_voice_simulate.py  test_watchtower_evaluator.py  test_watchtower_graph.py  test_watchtower_rules.py  test_watchtower_signals.py  test_worker_processing.py
tests/integration/: test_live_chaos_narrative.py  test_live_http_journey.py  test_phase0_localstack.py  test_phase1_tracer.py  test_phase2_sqs_pipeline.py  test_phase3_watchtower.py  test_phase4_intervention_planner.py  test_phase5_voice.py  test_phase6_recovery.py  test_phase7_demo.py
(+48 files in other folders)
